--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "This library provides a JavaScript based parser and formatter for the Bali Document Language™.",
   "main": "Gruntfile.js",
-  "scripts": {
-    "pretest": "generate-parser",
-    "test": "test-roundtrip"
-  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/craterdog-bali/js-bali-language.git"
@@ -24,13 +20,15 @@
   },
   "homepage": "https://github.com/craterdog-bali/js-bali-language#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
     "grunt": "^1.0.2",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.1"
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-mocha-test": "^0.13.3",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "antlr4": "^4.7.1"
